cpp/perfect-numbers/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.005s
user	0m0.001s
sys	0m0.004s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/perfect-numbers/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/perfect-numbers/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/perfect-numbers/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/perfect-numbers/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/perfect-numbers/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/perfect-numbers/build'
[ 25%] Building CXX object CMakeFiles/perfect-numbers.dir/perfect_numbers_test.cpp.o
[ 50%] Building CXX object CMakeFiles/perfect-numbers.dir/perfect_numbers.cpp.o
[ 75%] Building CXX object CMakeFiles/perfect-numbers.dir/test/tests-main.cpp.o
[100%] Linking CXX executable perfect-numbers
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/perfect-numbers/build'
[100%] Built target perfect-numbers
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/perfect-numbers/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/perfect-numbers/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/perfect-numbers/build'
===============================================================================
All tests passed (13 assertions in 13 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/perfect-numbers/build'
[100%] Built target test_perfect-numbers
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/perfect-numbers/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/perfect-numbers/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex "^.*(tests-main|CompilerId).*[.](gcda|gcno)$" -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/perfect-numbers.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/perfect-numbers.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex "^.*[.](gcda|gcno)12653"

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
perfect_numbers.cpp                           17      17   100%   
perfect_numbers_test.cpp                      39      39   100%   
test/catch.hpp                                39      27    69%   1448-1450,1617-1618,1621-1622,1642-1643,2227,2229,2560
------------------------------------------------------------------------------
TOTAL                                         95      83    87%
------------------------------------------------------------------------------
lines: 87.4% (83 out of 95)
branches: 37.8% (93 out of 246)

real	0m10.445s
user	0m9.527s
sys	0m0.918s

===============================================================================

cmake-format --in-place CMakeLists.txt

real	0m0.152s
user	0m0.109s
sys	0m0.046s

===============================================================================

cmake-lint CMakeLists.txt
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:61,70: [C0307] Bad indentation:
                                               )
  ^----BodyNode: 1:0->IfBlockNode: 59:0->BodyNode: 59:11->StatementNode: 60:2->TreeNode: 61:70

CMakeLists.txt:66,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 4


real	0m0.151s
user	0m0.106s
sys	0m0.047s

===============================================================================

Running: clang-format-16 -style=file -i ./perfect_numbers.cpp ./perfect_numbers_test.cpp ./perfect_numbers.h

real	0m0.019s
user	0m0.008s
sys	0m0.011s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./perfect_numbers.cpp ./perfect_numbers_test.cpp ./perfect_numbers.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
/home/vpayno/git_vpayno/exercism-workspace/cpp/perfect-numbers/perfect_numbers.h:4:10: fatal error: 'algorithm' file not found
#include <algorithm>
         ^~~~~~~~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/perfect-numbers/perfect_numbers.h.

real	0m0.604s
user	0m0.570s
sys	0m0.034s


real	0m0.605s
user	0m0.571s
sys	0m0.035s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
21719 warnings generated.
57108 warnings generated.
57108 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/perfect-numbers/perfect_numbers.h.
Suppressed 57115 warnings (57108 in non-user code, 7 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m7.907s
user	0m7.835s
sys	0m0.070s
Running: clang-tidy-16 ./perfect_numbers.cpp ./perfect_numbers_test.cpp ./perfect_numbers.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/perfect-numbers/perfect_numbers.h:4:10: error: 'algorithm' file not found [clang-diagnostic-error]
#include <algorithm>
         ^~~~~~~~~~~


real	0m7.909s
user	0m7.838s
sys	0m0.071s

===============================================================================

